h/static/styles/threads.scss
$thread-padding: 1em;
$threadexp-width: .6em;

.stream-list {
  & > * {
    margin-bottom: .72em;
  }

  .card-emphasis {
    box-shadow: 6px 6px 8px -2px $gray-light;
  }
}

.thread-list {
  margin-top: 0.5em;

  .thread-collapsed {
    .tag-list, .annotation-body {display: none;}
    .thread-reply { margin-top: 0 }
  }
}

.thread {
  cursor: pointer;
  position: relative;

  & > ul {
    padding-left: $thread-padding + .15em;
    margin-left: -$thread-padding;
  }

  .reply-count {
    color: $gray-light;
    &:focus { outline: 0; }
  }

  .thread {
    border-left: 1px dotted $gray-light;
    padding: 0;
    padding-left: $thread-padding;

    &.thread-collapsed {
      border-color: transparent;

      & > article markdown {
        display: none;
      }
    }
  }

  .threadexp {
    background: $white;
    color: $gray-light;
    position: absolute;
    width: 1.4em;
    height: 1.4em;
    top: 0;
    left: -.7em;

    span {
      position: absolute;
      top: (1.4 - $threadexp-width) / 2;
      left: (1.4 - $threadexp-width) / 2;
      width: $threadexp-width;
      height: $threadexp-width;

      &:before {
        font-size: $threadexp-width;
        position: absolute;
        top: 0;
        left: 0;
      }
    }
  }

  &.thread-collapsed {
    &:hover {
      background-color: $gray-lightest;
    }

    & > ul {
      display: none;
    }

    & > .thread-message {
      .thread &,
      .thread & .annotation-header,
      .thread & .annotation-section { margin: 0 }
      
      .styled-text > .MathJax_Display {
          display: none !important;
        }

      .styled-text > *:nth-child(2) {
        &.MathJax_Display {
          display: block !important;
        }
      }

      .styled-text > * { display: none }
      .styled-text > *:first-child {
        display: block;
        margin: 0;
        overflow: hidden;
        text-overflow: ellipsis;
        -o-text-overflow: ellipsis;
        white-space: nowrap;
      }

      .thread & footer { display: none }
    }
  }
}

.thread-message {
  margin-bottom: .8em;
}

.thread-reply {
  margin-top: -2.153em;
  margin-bottom: .8em;
}

.thread-message:hover + .thread-reply {
  .reply-count {
    color: $link-color;

    &:hover, &:focus {
      color: $link-color-hover;
    }
  }
}

.thread-load-more {
  clear: both;
}

